--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <<head>
-    <title>This is my web site</<title>
+    <title>This is my web site</title>
   </head>
   <body>
     Hello! World Hello! Again, Hello for the 3rd time!, 4th time
